# avvv_dm

./: .gitignore  README.md  launch.sh
analyser/: .gitignore  Readme.md  conf.ini  config_AVNV.py  config_avvv.py  csv_tools.py  general_tools.py  main.py  network_status.py  nodes.py  plotting.py  requirements.txt  ros2_dm_merger.py  ros2_pcap_merger.py  topics.py
analyser/csv_interface/: csv_general_tools.py  csv_to_freeSpaceinfoDM.py  dm_interface.py
analyser/dm_freespace_info_msgs/msg/: CsvFreespaceInfo.msg
analyser/dm_object_info_msgs/msg/: Acceleration.msg  AuxiliaryBrakeState.msg  BrakeState.msg  ClassConfidence.msg  ControlSystemState.msg  CrpId.msg  DistanceValue.msg  ExistenceConfidence.msg  ExteriorLights.msg  GeodeticSystem.msg  LaneCount.msg  LaneId.msg  LanePosition.msg  Location.msg  ObjectClass.msg  ObjectDimension.msg  ObjectId.msg  ObjectInfoArray.msg  ObjectSize.msg  OtherSubclassType.msg  ReferencePoint.msg  SpeedAccuracy.msg  ThrottlePosition.msg  VehicleRole.msg  WGS84AngleValue.msg  YawRate.msg  YawRateAccuracy.msg
analyser/dm_ros_msgs/msg/: DMMessage.msg  DMN.msg
analyser/dm_signal_info_msgs/msg/: ArrowLightIndication.msg  EventCount.msg  SignalInfoArray.msg  SignalLightInfo.msg
analyser/packet_interface/: cpm_interface.py  pcap_file_interface.py
analyser/ros2_interface/: ros2file_gen.py  ros2file_read.py  ros2msg_gen.py  tools.py
sample_data/: sample_configuration
sample_data/csvs/: Free_RSU_2.csv  Object_RSU_2.csv  Object_RSU_3.csv  Signal_RSU_1.csv  TF_OBU_1.csv
ui/visually_dm_launcher/: .gitignore  CMakeLists.txt
ui/visually_dm_launcher/lib/common/: common.cpp  common.hpp
ui/visually_dm_launcher/src/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
visualiser/src/csv2bag/: package.xml  setup.cfg  setup.py
visualiser/src/csv2bag/config/: config.yaml
visualiser/src/csv2bag/csv2bag/: main.py
visualiser/src/dm_msgs/dm_cooperative_msgs/: CMakeLists.txt  package.xml
visualiser/src/dm_msgs/dm_cooperative_msgs/msg/: CooperativeFreespaceInfoMessage.msg  CooperativeObjectInfoMessage.msg  CooperativeSignalInfoMessage.msg
visualiser/src/dm_msgs/dm_debug_msgs/: CMakeLists.txt  package.xml
visualiser/src/dm_msgs/dm_debug_msgs/msg/: DebugInfoWithObjectId.msg  DebugInfoWithObjectIdArray.msg  DebugInfoWithSignalId.msg  DebugInfoWithSignalIdArray.msg
visualiser/src/dm_msgs/dm_freespace_info_msgs/: CMakeLists.txt  README.md  package.xml
visualiser/src/dm_msgs/dm_freespace_info_msgs/msg/: FreespaceInfo.msg  FreespaceInfoArray.msg
visualiser/src/dm_msgs/dm_network_info_msgs/: CMakeLists.txt  package.xml
visualiser/src/dm_msgs/dm_network_info_msgs/msg/: FreespaceInfoN.msg  NetworkStatus.msg  ObjectInfoN.msg  SignalInfoN.msg
visualiser/src/dm_msgs/dm_object_info_msgs/: CMakeLists.txt  README.md  package.xml
visualiser/src/dm_msgs/dm_object_info_msgs/msg/: AccelerationAccuracy.msg  AccelerationValue.msg  Altitude.msg  AltitudeAccuracy.msg  ClassId.msg  ControlSystemStates.msg  DistanceRatio.msg  LaneLateralPosition.msg  Latitude.msg  Location.msg  Longitude.msg  ObjectColor.msg  ObjectDimensionAccuracy.msg  ObjectDimensionValue.msg  ObjectInfo.msg  SemiAxisLength.msg  ShiftPosition.msg  Speed.msg  SpeedValue.msg  SteeringAngle.msg  SubclassType.msg  TimestampIts.msg  VehicleExtendedInformation.msg  WGS84Angle.msg  WGS84AngleAccuracy.msg  YawRateValue.msg
visualiser/src/dm_msgs/dm_pole_info_msgs/: CMakeLists.txt  README.md  package.xml
visualiser/src/dm_msgs/dm_pole_info_msgs/msg/: AreaId.msg  DeviceErrorInfo.msg  DeviceId.msg  DeviceMfrId.msg  DeviceOpStat.msg  DeviceStat.msg  DeviceTypeId.msg  DeviceUniqueId.msg  DirectionMin.msg  DistanceMax.msg  PoleData.msg  PoleHeader.msg  PoleId.msg  PoleInfo.msg  SecLvl.msg
visualiser/src/dm_msgs/dm_signal_info_msgs/: CMakeLists.txt  README.md  package.xml
visualiser/src/dm_msgs/dm_signal_info_msgs/msg/: CountDownStopFlag.msg  MainLightIndication.msg  MaxTimeToChange.msg  SignalInfo.msg  SignalState.msg
visualiser/src/visplot/: README.md  package.xml
visualiser/src/visplot/visplot/: plotter_manager.py
visualiser/src/visually_dm/: CMakeLists.txt  README.md  package.xml
visualiser/src/visually_dm/include/visually_dm/: dm_standards.hpp  entities.hpp  heatmap.hpp  manager.hpp  net_status.hpp  pointcloud_tools.hpp  rviz_tools.hpp  transforms.hpp
visualiser/src/visually_dm/launch/: sim_dm.launch.py  visualiser.launch.py
visualiser/src/visually_dm/rviz/: rviz_conf.rviz
visualiser/src/visually_dm/sample_data/rosbag2_2023_09_04-16_56_56/: metadata.yaml
visualiser/src/visually_dm/src/: entities.cpp  heatmap.cpp  main.cpp  manager.cpp  net_status.cpp  pointcloud_tools.cpp  rviz_tools.cpp  transforms.cpp
