<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dm_network_info_msgs</name>
  <version>0.0.0</version>
  <description>ROS2 messages for the network status profiling of the DM standard and its messages</description>
  <maintainer email="amir.intelli@gmail.com">amirint</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>dm_object_info_msgs</build_depend>
  <build_depend>dm_signal_info_msgs</build_depend>
  <build_depend>dm_freespace_info_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
