<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dm_signal_info_msgs</name>
  <version>1.0.1</version>
  <description>ROS message format of signal information in DM2.0</description>
  <maintainer email="fukukazu.kawata@nces.i.nagoya-u.ac.jp">Fukukazu Kawata</maintainer>
  <author email="fukukazu.kawata@nces.i.nagoya-u.ac.jp">Fukukazu Kawata</author>
  <license>T.B.D</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>dm_object_info_msgs</build_depend>

  <exec_depend>dm_object_info_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
